<resources>
    <string name="app_name">MoodTrackr</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name = "survey_title">Today\'s Survey</string>
    
    <string name="buttonIdForTag">0</string>
    <string name="com_auth0_domain">dev-dh23pufb.us.auth0.com</string>
    <string name="com_auth0_clientId">HSMJ0SyYwxlfXh9IKhYMTYYekMe62qmU</string>
    <string name="com_auth0_clientSecret">Z0kLtmA7uy77hE6MCqe4jqdzIXX_i5ph5LDT8Rm8Kwp1QDp8vkkGZ5K26COhd51B</string>
    <string name="restApiUrl">https://mdtkr-volunteer.herokuapp.com/</string>
    <string name="com_auth0_audience">https://dev-dh23pufb.us.auth0.com/api/v2/</string>
    <string name="token_identifier">MDTKR_AUTH0_TOKEN</string>
    <string name="token_expiry">MDTKR_AUTH0_TOK_EXPIRY</string>
    <string name="token_refresh">MDTKR_AUTH0_REFRESH_TOKEN</string>
    <string name="token_user_id">MDTKR_AUTH0_USER_ID</string>

    <string name="demographics_title">Let\'s get you set up!</string>
    <string name="dobPrompt">Date of Birth</string>
    <string name="genderPrompt">Gender</string>
    <string name="racePrompt">Race</string>
    <string name="login_status_identifier">MDTKR_LOGIN_IDENTIFIER</string>
    <string name="setup_status_identifier">MDTKR_SETUP_IDENTIFIER</string>
    <string name="auth0_user_metadata">MDTKR_AUTH0_USER_METADATA</string>
    <string name="com_auth0_scope">openid profile email offline_access read:current_user update:current_user_metadata</string>
    <string name="mdtkr_prev_query">MDTKR_PREV_PERIODIC_COLL</string>
    <string name="permissionsTitle">Read App Usage Permissions</string>
    <string name="batteryPermissionsTitle">Protection From Battery Optimization</string>
    <string name="failurePermsTxtMsg">Permissions has not been provided!</string>
    <string name="surveyNotifSent">was_survey_requested</string>
    <string name="mdtkr_update_downloaded">MDTKR_IS_UPDATE_DOWNLOADED</string>
    <string name="mdtkr_update_loc">MDTKR_UPDATE_PATH</string>
    <string name="mdtkr_latest_version">MDTKR_LATEST_VERSION_ONLINE</string>
    <string name="mdtkr_mobile_data_prefs">MDTKR_MOBILE_DATA_PREFERENCES</string>

    <string-array name="genderOptions">
        <item>Male</item>
        <item>Female</item>
        <item>Intersex</item>
        <item>Trans</item>
        <item>Other</item>
    </string-array>
    <string-array name="raceOptions">
        <item>White</item>
        <item>Black or African American</item>
        <item>American Indian or Alaska Native</item>
        <item>Asian</item>
        <item>Native Hawaiian or Other Pacific Islander</item>
        <item>Other</item>
    </string-array>
</resources>