<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:background="#00FFFFFF"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/demographics_title"
                android:textSize="34sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addStatesFromChildren="true"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbarSize="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="12sp"
                        app:cardElevation="0sp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="18sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/permission_title_usage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:text="@string/permissionsTitle"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/failureTxtUsage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:text="@string/failurePermsTxtMsg"
                                android:textColor="@color/design_default_color_secondary"
                                android:visibility="gone" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <Button
                                    android:id="@+id/appUsageLogsPermBtn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Next"
                                    android:visibility="visible"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toStartOf="parent"
                                    tools:visibility="visible" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="12sp"
                        app:cardElevation="0sp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="18sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/permission_title_battery_opt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:text="@string/batteryPermissionsTitle"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/failureTxtBattery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="12dp"
                                android:text="@string/failurePermsTxtMsg"
                                android:textColor="@color/design_default_color_secondary"
                                android:visibility="gone"
                                tools:visibility="visible" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <Button
                                    android:id="@+id/batteryOptPermBtn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Next"
                                    android:visibility="gone"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toStartOf="parent"
                                    tools:visibility="visible" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/continueBtn"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:text="Continue"
                            android:visibility="invisible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_conversion_absoluteHeight="40dp"
                            tools:layout_conversion_absoluteWidth="161dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/meme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />
</androidx.constraintlayout.widget.ConstraintLayout>